--- a/frontend-nuxt/package.json
+++ b/frontend-nuxt/package.json
@@ -10,6 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@vicons/fluent": "^0.13.0",
+    "@vicons/utils": "^0.1.4",
     "nuxt": "^4.3.0",
     "vue": "^3.5.27",
     "vue-router": "^4.6.4"
