--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.11.1
 Django==5.2.11
 django-cors-headers==4.9.0
+gunicorn==25.0.2
+packaging==26.0
 pillow==12.1.0
 qrcode==8.2
 sqlparse==0.5.5
